syntax = "proto3";
package milvus.proto.segcore;

option go_package = "github.com/milvus-io/milvus/internal/proto/segcorepb";
import "schema.proto";

message RetrieveRequest {
  schema.IDs ids = 1;
  repeated string output_fields = 2;
}

message RetrieveResults {
  schema.IDs ids = 1;
  repeated schema.FieldData fields_data = 2;
}

message LoadFieldMeta {
    int64 min_timestamp = 1;
    int64 max_timestamp = 2;
    int64 row_count = 3;
}

message LoadSegmentMeta {
    // TODOs
    repeated LoadFieldMeta metas = 1;
    int64 total_size = 2;
}
